# jhelper-sample

./: .gitignore  CMakeLists.txt  run.template  submission.template  task.template
output/: main.cpp
tasks/: A.cpp  A.task  B.cpp  B.task  C.cpp  C.task  D.cpp  D.task  E.cpp  E.task
testrunner/: main.cpp
